[project]
name = "alpaca-mcp-server"
version = "0.1.0"
description = "Model Context Protocol (MCP) server implementation for Alpaca's Trading API with OAuth support"
requires-python = ">=3.10"
dependencies = [
    "alpaca-py",
    "fastmcp",
    "python-dotenv",
]

[project.scripts]
alpaca-mcp-server = "alpaca_mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
